2008-07-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/rtems/status-checks.h: Fix style.

2008-07-10     Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/include/rtems/rtems/intr.h: Documentation.

	* cpukit/include/rtems/irq-extension.h: Extension of the RTEMS
	Interrupt Manager (shared handler and handler with a handle).


2008-07-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* cpukit/include/rtems/status-checks.h: Macros for status code and
	return value checks.

	* cpukit/libmisc/shell/shell.c: Restore terminal settings on exit.

	* cpukit/libfs/src/dosfs/msdos_dir.c,
	cpukit/libfs/src/dosfs/msdos_file.c: Added S_IRWXU, S_IRWXG and S_IRWXO
	to file mode.

	* cpukit/libi2c/libi2c.h, cpukit/libi2c/libi2c.c: Modified error
	messages.  Driver operations table is now constant.  New entry in the
	rtems_libi2c_tfr_mode_t structure: idle_char. This character will be
	continuously transmitted in read only functions.

2008-07-03	Chris Johns <chrisj@rtems.org>

	* cpukit/libcsupport/include/chain.h: Removed. Use the SAPI
	interface that is supported.

	* cpukit/libcsupport/Makefile.am,
	cpukit/libcsupport/preinstall.am: Remove chain.h header
	references.

	* cpukit/sapi/include/rtems/chain.h,
	cpukit/sapi/inline/rtems/chain.inl: New. A supported chains
	interface.

	* cpukit/sapi/Makefile.am, cpukit/sapi/preinstall.am: Updated to
	include the new chains interface.

	* cpukit/libfs/src/imfs/imfs.h,
	cpukit/libfs/src/imfs/imfs_creat.c,
	cpukit/libfs/src/imfs/imfs_debug.c,
	cpukit/libfs/src/imfs/imfs_directory.c,
	cpukit/libfs/src/imfs/imfs_fsunmount.c,
	cpukit/libfs/src/imfs/imfs_getchild.c,
	cpukit/libfs/src/imfs/imfs_load_tar.c,
	cpukit/libfs/src/imfs/imfs_rmnod.c,
	cpukit/libfs/src/imfs/memfile.c,
	cpukit/libfs/src/nfsclient/src/nfs.c,
	cpukit/libcsupport/include/rtems/libio.h,
	cpukit/libcsupport/src/malloc_deferred.c,
	cpukit/libcsupport/src/mount.c,
	cpukit/libcsupport/src/privateenv.c,